--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,5 +48,16 @@
  height: 200px !important
 }
 
-
+.image-container {
+  width: 100%; 
+}
+.image-container > div {
+     position: unset !important;
+}
+.image-container .image {
+     object-fit: contain;
+     width: 100% !important;
+     position: relative !important;
+     height: unset !important;
+}
   
