--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,6 +95,10 @@ h1,h2,h3,h4,h5,h6,p,span,li,a{
      font-family: 'Inter', sans-serif;
 }
 
+.bg-pos-right{
+     background-position: right -12em bottom;
+}
+
 /* media queries  */
 @media (max-height: 900px){
      .ReactModalPortal>div>div{
