--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,11 +99,11 @@ h1,h2,h3,h4,h5,h6,p,span,li,a{
      background-position: right -12em bottom;
 }
 
-input[type="date"]::-webkit-inner-spin-button,
+/* input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
     display: none;
     -webkit-appearance: none;
-}
+} */
 ._list li{
      list-style: disc;
 }
